<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/logo_black_wickedride"
            android:layout_margin="70dp"/>
        <ImageView
            android:id="@+id/close_password"
            style="@style/layout_wrap"
            android:src="@drawable/cross_black"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:padding="15dp"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>



    <TextView
        android:id="@+id/forgot_pwd_title"
        style="@style/layout_wrap"
        android:layout_above="@+id/old_password_title"
        android:layout_marginLeft="18dp"
        android:text="@string/change_password"
        android:textAllCaps="true"
        android:paddingBottom="10dp"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/old_password_title"
        style="@style/Bikation_Title_details"
        android:layout_above="@+id/old_password"
        android:layout_marginLeft="18dp"
        android:text="@string/old_password_title" />

    <EditText
        android:id="@+id/old_password"
        style="@style/EditTextTheme"
        android:layout_above="@+id/new_password_title"
        android:layout_marginRight="18dp"
        android:layout_marginLeft="18dp"
        android:ems="10"
        android:imeOptions="actionNext"
        android:hint="@string/password"
        android:textCursorDrawable="@drawable/cursor_drawable"
        android:inputType="textPassword"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/new_password_title"
        style="@style/Bikation_Title_details"
        android:layout_above="@+id/new_password"
        android:layout_marginLeft="18dp"
        android:text="@string/new_password_title" />

    <EditText
        android:id="@+id/new_password"
        style="@style/EditTextTheme"
        android:layout_above="@+id/confirm_password_title"
        android:layout_marginRight="18dp"
        android:layout_marginLeft="18dp"
        android:ems="10"
        android:imeOptions="actionNext"
        android:textCursorDrawable="@drawable/cursor_drawable"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/confirm_password_title"
        style="@style/Bikation_Title_details"
        android:layout_above="@+id/confirm_new_password"
        android:layout_marginLeft="18dp"
        android:text="@string/confirm_password_title" />

    <EditText
        android:id="@+id/confirm_new_password"
        style="@style/EditTextTheme"
        android:layout_above="@+id/reset_password"
        android:layout_marginRight="18dp"
        android:layout_marginLeft="18dp"
        android:ems="10"
        android:imeOptions="actionDone"
        android:hint="@string/password"
        android:textCursorDrawable="@drawable/cursor_drawable"
        android:inputType="textPassword"
        android:textStyle="bold" />

    <Button
        android:id="@+id/reset_password"
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:layout_margin="15dp"
        android:layout_alignParentBottom="true"
        android:background="@android:color/black"
        android:text="@string/reset_password"
        android:textStyle="bold" />



</LinearLayout>