<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.wickedride.app.activities.SignInActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="82dp"
        android:src="@drawable/logo_black_wickedride" />

    <TextView
        android:id="@+id/forgot_pwd_title"
        style="@style/layout_wrap"
        android:layout_above="@+id/forgot_pwd_desc"
        android:layout_marginBottom="15dp"
        fontPath="fonts/Avenir-Roman.ttf"
        android:layout_marginLeft="18dp"
        android:text="@string/forgot_password_title"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <TextView
        fontPath="fonts/Avenir-Roman.ttf"
        android:id="@+id/forgot_pwd_desc"
        style="@style/layout_wrap"
        android:layout_above="@+id/user_email"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="18dp"
        android:text="@string/forgot_password_desc"
        android:textColor="@android:color/black"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/user_email"
        style="@style/EditTextTheme"
        android:layout_above="@+id/send"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="25dp"
        android:inputType="textEmailAddress"
        android:textCursorDrawable="@drawable/cursor_drawable"
        android:ems="10"
        android:singleLine="true"
        android:hint="@string/email" />

    <Button
        android:id="@+id/send"
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:layout_above="@+id/register_holder"
        android:layout_margin="15dp"
        android:background="@android:color/black"
        android:text="@string/send"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/register_holder"
        style="@style/layout_match_wrap"
        android:layout_alignParentBottom="true"
        android:layout_margin="15dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:paddingLeft="5dp"
            android:text="@string/return_to"
            android:textAllCaps="true"
            android:textColor="@color/silver_grey" />

        <TextView
            fontPath="fonts/Avenir-Roman.ttf"
            android:id="@+id/sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/sign_in"
            android:textColor="@color/black" />

    </LinearLayout>

    <ImageView
        android:id="@+id/close"
        style="@style/layout_wrap"
        android:src="@drawable/cross_black"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_margin="15dp"
        android:layout_alignParentEnd="true" />

    <RelativeLayout
        android:id="@+id/progressLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_translucent_grey"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        android:clickable="true" >

    <com.wickedride.app.views.WRProgressView
        android:id="@+id/progress"
        android:layout_width="150dp"
        android:layout_centerInParent="true"
        android:layout_height="100dp"
        android:visibility="visible" />
    </RelativeLayout>
</RelativeLayout>
